@@ -1,37 +1,16 @@
 use strict;
 use warnings;
 
-use Module::Build 0.4004;
+use Module::Build ##{ $meta2{prereqs}->{configure}->{requires}->{'Module::Build'} ##};
 
 sub testing { $ENV{AUTOMATED_TESTING} || $ENV{PERL_CPAN_REPORTER_CONFIG}
                                       || $ENV{PERL5_CPANPLUS_IS_VERSION} }
 sub whimper { print {*STDOUT} $_[ 0 ]."\n"; exit 0 }
 
-my $perl_ver = 5.010001;
-my $name     = 'File-Gettext'; $name =~ s{ - }{::}gmx;
+my $perl_ver = ##{ $meta2{prereqs}->{runtime}->{requires}->{perl} ##};
+my $name     = '##{ $zilla->name ##}'; $name =~ s{ - }{::}gmx;
 my $prereqs  = {
-  'build_requires' => {
-    'Module::Build' => '0.4004',
-    'Test::Requires' => '0.06',
-    'Text::Diff' => '1.37',
-    'version' => '0.88'
-  },
-  'configure_requires' => {
-    'Module::Build' => '0.4004',
-    'version' => '0.88'
-  },
-  'requires' => {
-    'Class::Method::ModifiersX::Augment' => '0.001',
-    'Date::Format' => '2.22',
-    'Encode' => '2.12',
-    'File::DataClass' => 'v0.42.0',
-    'Moo' => '1.004002',
-    'Try::Tiny' => '0.18',
-    'Type::Tiny' => '0.030',
-    'Unexpected' => 'v0.22.0',
-    'namespace::autoclean' => '0.19',
-    'perl' => '5.010001'
-  },
+##{ $plugin->get_prereqs( 1 ) ##}
 };
 
 if ($] < $perl_ver) { # Not interested in reports below min perl ver
@@ -45,7 +24,7 @@ Module::Build->new(
    'module_name' => $name,
    'notes'       => { min_perl_version => $perl_ver },
    %{ $prereqs },
-
+##{ $plugin->get_default('share_dir') ##}
 )->create_build_script;
 
 exit 0;
